--- a/src/app/views/appointments/create.njk
+++ b/src/app/views/appointments/create.njk
@@ -15,20 +15,7 @@
   <form action="/app/appointments/new/{{ provider.id }}" method="post">
     <input type="text" class="flatpickr" placeholder="Escolha uma data" />
 
-    <div id="hours">
-      <label>
-        <input type="radio" name="" id="">12:00
-      </label>
-      <label>
-        <input type="radio" name="" id="">13:00
-      </label>
-      <label>
-        <input type="radio" name="" id="">14:00
-      </label>
-      <label>
-        <input type="radio" name="" id="">15:00
-      </label>
-    </div>
+    <div id="hours"></div>
 
     <button type="submit">Agendar</button>
   </form>
@@ -39,7 +26,14 @@
 <script type="text/javascript">
   flatpickr('.flatpickr', {
     minDate: new Date(),
-    dateFormat: 'd/m/y'
+    dateFormat: 'd/m/y',
+    onChange: function (date) {
+      fetch(`/app/available/{{ provider.id }}?date=${date[0].getTime()}`).then(response => {
+        response.text().then(function(html) {
+          document.getElementById('hours').innerHTML = html
+        })
+      })
+    }
   })
 </script>
 
