--- a/src/app/views/dashboard.njk
+++ b/src/app/views/dashboard.njk
@@ -16,6 +16,14 @@
         </li>
       {% endfor %}
     </ul>
+
+    <div>
+    {% if user.provider === true %}
+        <a href="/app/schedule" class="schedule">Meus Agendamentos</a>
+    {% endif %}
+
+    </div>
+
     <a href="/app/logout" class="logout">Sair</a>
   </div>
 {% endblock%}
